--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
    </script>
-    <script src="https://cdn.jsdelivr.net/npm/particles.js"></script>
+    <script src="particles.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
