--- a/public/index.html
+++ b/public/index.html
@@ -1,21 +1,25 @@
 <!DOCTYPE html>
-<html lang="en" class="romance-background">
+<html lang="en" class="">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Romantic Page for My Girlfriend</title>
+    <script src="https://cdn.socket.io/4.7.5/socket.io.min.js" integrity="sha384-2huaZvOR9iDzHqslqwpR87isEmrfxqyWOF7hr7BY6KG0+hVKLoEXMPUJw3ynWuhO" crossorigin="anonymous"></script>
+
+
+    <script src="src/particles.js"></script>
     <link rel="stylesheet" href='style/style.css'>
     <link rel="stylesheet" href="style/animation.css">
 </head>
 
-<body class="romance-background">
+<body class="">
 
     <div class="floating-container">
         <div id="main-article">
             <!-- <img  class="avatar" src="img/moon_rotate.gif" alt=""> -->
             <img class="float" src="img/moon_rotate.gif" alt="">
-          
+
         </div>
 
         <div id="menu">
@@ -37,16 +41,16 @@
             <button id="sent-btn">Sent</button>
         </div>
     </div>
-   
+
     <div id="particle-js">
 
     </div>
 
 
-<script type="module" src="js/fcm.js"></script>
+    <script type="module" src="js/fcm.js"></script>
+
     <script type="module" src="js/fcm.js"></script>
     <script src="js/sent-message.js"></script>
-    <script src="src/particles.js"></script>
     <script src="js/script.js"></script>
 </body>
 
