--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="">
+<html lang="en" class="romance-background">
 
 <head>
     <meta charset="UTF-8">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="style/animation.css">
 </head>
 
-<body class="">
+<body class="romance-background">
 
     <div class="floating-container">
         <div id="main-article">
