update with firebase

--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
     <script type="module" src="js/fcm.js"></script>
 
     <script type="module" src="js/fcm.js"></script>
-    <script src="js/sent-message.js"></script>
+    <!-- <script src="js/sent-message.js"></script> -->
     <script src="js/script.js"></script>
 </body>
 
